--- a/projects/lobby/tsconfig.app.json
+++ b/projects/lobby/tsconfig.app.json
@@ -2,13 +2,13 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../out-tsc/lib",
-    "declaration": true,
-    "declarationMap": true,
-    "inlineSources": true,
+    "outDir": "../../out-tsc/app",
     "types": []
   },
-  "exclude": [
-    "**/*.spec.ts"
+  "files": [
+    "src/main.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
   ]
 }
