--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "@shig/core",
-  "version": "0.0.1",
-  "peerDependencies": {
-    "@angular/common": "^16.2.0",
-    "@angular/core": "^16.2.0",
-    "dexie": "^3.2.4"
-  },
-  "dependencies": {
-    "tslib": "^2.3.0"
-  },
-  "sideEffects": false
+    "name": "@shig/core",
+    "version": "0.0.1",
+    "peerDependencies": {
+        "@angular/common": "^16.2.0",
+        "@angular/core": "^16.2.0",
+        "dexie": "^3.2.4",
+        "sdp-transform": "^2.14.1",
+        "@types/sdp-transform": "^2.4.9"
+    },
+    "dependencies": {
+        "tslib": "^2.3.0"
+    },
+    "sideEffects": false
 }
