--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -4,9 +4,15 @@
     "peerDependencies": {
         "@angular/common": "^16.2.0",
         "@angular/core": "^16.2.0",
+        "@angular/animations": "^16.2.0",
+        "@angular/compiler": "^16.2.0",
+        "@angular/elements": "^16.2.5",
+        "@angular/forms": "^16.2.0",
+        "@angular/platform-browser": "^16.2.0",
+        "@angular/platform-browser-dynamic": "^16.2.0",
+        "@angular/router": "^16.2.0",
         "dexie": "^3.2.4",
-        "sdp-transform": "^2.14.1",
-        "@types/sdp-transform": "^2.4.9"
+        "sdp-transform": "^2.14.1"
     },
     "dependencies": {
         "tslib": "^2.3.0"
