--- a/package.json
+++ b/package.json
@@ -1,6 +1,28 @@
 {
   "name": "shig-js-sdk",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "Shig Lobby",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/shigde/shig-js-sdk.git"
+  },
+  "keywords": [
+    "angular",
+    "shig",
+    "interactive streaming",
+    "components"
+  ],
+  "license": "MIT",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/shigde/shig-js-sdk/blob/master/LICENSE"
+    }
+  ],
+  "bugs": {
+    "url": "https://github.com/shigde/shig-js-sdk/issues"
+  },
+  "homepage": "https://github.com/shigde/shig-js-sdk#readme",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,7 +33,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "^16.2.0",
     "@angular/common": "^16.2.0",
