rename pkg and add common js instruction

--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@shig/core",
+  "name": "@shigde/core",
   "version": "0.0.1",
   "description": "Shig Lobby Library",
   "repository": {
