--- a/angular.json
+++ b/angular.json
@@ -107,10 +107,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "lobby:build:production"
+              "buildTarget": "lobby:build:production"
             },
             "development": {
-              "browserTarget": "lobby:build:development"
+              "buildTarget": "lobby:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -118,7 +118,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "lobby:build"
+            "buildTarget": "lobby:build"
           }
         },
         "test": {
