--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shigde/core",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Shig Lobby Library",
   "repository": {
     "type": "git",
@@ -33,11 +33,15 @@
     "@angular/platform-browser": "^17.0.8",
     "@angular/platform-browser-dynamic": "^17.0.8",
     "@angular/router": "^17.0.8",
+    "@material/web": "^1.1.1",
     "dexie": "^3.2.4",
     "sdp-transform": "^2.14.1"
   },
   "dependencies": {
     "tslib": "^2.3.0"
+  },
+  "devDependencies": {
+    "@types/sdp-transform": "^2.4.9"
   },
   "sideEffects": false
 }
