--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,8 +29,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build
-        run: npm run build
+      - name: Build core
+        run: npm run build:core
+
+      - name: Build lobby
+        run: npm run build:lobby
 
       # - name: Run tests
       #   run: npm run test
