--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "test": "ng test"
   },
   "private": false,
-  "dependencies": {
+  "peerDependencies": {
     "@angular/animations": "^19.2.0",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
