--- a/package.json
+++ b/package.json
@@ -35,15 +35,15 @@
   },
   "private": false,
   "peerDependencies": {
-    "@angular/animations": "^20.0.3",
-    "@angular/common": "^20.0.3",
-    "@angular/compiler": "^20.0.3",
-    "@angular/core": "^20.0.3",
-    "@angular/elements": "^20.0.3",
-    "@angular/forms": "^20.0.3",
-    "@angular/platform-browser": "^20.0.3",
-    "@angular/platform-browser-dynamic": "^20.0.3",
-    "@angular/router": "^20.0.3",
+    "@angular/animations": "^20.0.2",
+    "@angular/common": "^20.0.2",
+    "@angular/compiler": "^20.0.2",
+    "@angular/core": "^20.0.2",
+    "@angular/elements": "^20.0.2",
+    "@angular/forms": "^20.0.2",
+    "@angular/platform-browser": "^20.0.2",
+    "@angular/platform-browser-dynamic": "^20.0.2",
+    "@angular/router": "^^20.0.2",
     "@material/web": "^2.3.0 ",
     "dexie": "^3.2.4",
     "rxjs": "~7.8.0",
@@ -53,8 +53,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^20.0.2",
-    "@angular/cli": "~20.0.2",
-    "@angular/compiler-cli": "^20.0.3",
+    "@angular/cli": "^20.0.2",
+    "@angular/compiler-cli": "^20.0.2",
     "@types/jasmine": "~4.3.0",
     "@types/sdp-transform": "^2.4.9",
     "concat": "^1.0.3",
