--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@angular/forms": "^20.0.2",
     "@angular/platform-browser": "^20.0.2",
     "@angular/platform-browser-dynamic": "^20.0.2",
-    "@angular/router": "^^20.0.2",
+    "@angular/router": "^20.0.2",
     "@material/web": "^2.3.0 ",
     "dexie": "^3.2.4",
     "rxjs": "~7.8.0",
