--- a/package.json
+++ b/package.json
@@ -49,15 +49,18 @@
     "rxjs": "~7.8.0",
     "sdp-transform": "^2.14.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "debug": "^4.4.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^20.0.2",
     "@angular/cli": "^20.0.2",
     "@angular/compiler-cli": "^20.0.2",
+    "@types/debug": "^4.1.12",
     "@types/jasmine": "~4.3.0",
     "@types/sdp-transform": "^2.4.9",
     "concat": "^1.0.3",
+    "debug": "^4.4.3",
     "fs-extra": "^11.1.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
