--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -35,13 +35,15 @@
     "@angular/router": "^20.0.2",
     "@material/web": "^2.3.0",
     "dexie": "^3.2.4",
-    "sdp-transform": "^2.14.1"
+    "sdp-transform": "^2.14.1",
+    "debug": "^4.4.3"
   },
   "dependencies": {
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@types/sdp-transform": "^2.4.9"
+    "@types/sdp-transform": "^2.4.9",
+    "@types/debug": "^4.1.12"
   },
   "sideEffects": false
 }
