--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -34,9 +34,11 @@
     "@angular/platform-browser-dynamic": "^20.0.2",
     "@angular/router": "^20.0.2",
     "@material/web": "^2.3.0",
+    "@types/debug": "^4.1.12",
     "dexie": "^3.2.4",
     "sdp-transform": "^2.14.1",
     "debug": "^4.4.3"
+
   },
   "dependencies": {
     "tslib": "^2.3.0"
