--- a/package.json
+++ b/package.json
@@ -35,15 +35,15 @@
   },
   "private": false,
   "peerDependencies": {
-    "@angular/animations": "^20.0.2",
-    "@angular/common": "^20.0.2",
-    "@angular/compiler": "^20.0.2",
-    "@angular/core": "^20.0.2",
-    "@angular/elements": "^20.0.2",
-    "@angular/forms": "^20.0.2",
-    "@angular/platform-browser": "^20.0.2",
-    "@angular/platform-browser-dynamic": "^20.0.2",
-    "@angular/router": "^20.0.2",
+    "@angular/animations": "^21.0.6",
+    "@angular/common": "^21.0.6",
+    "@angular/compiler": "^21.0.6",
+    "@angular/core": "^21.0.6",
+    "@angular/elements": "^21.0.6",
+    "@angular/forms": "^21.0.6",
+    "@angular/platform-browser": "^21.0.6",
+    "@angular/platform-browser-dynamic": "^21.0.6",
+    "@angular/router": "^21.0.6",
     "@material/web": "^2.3.0 ",
     "@types/debug": "^4.1.12",
     "dexie": "^3.2.4",
@@ -54,12 +54,12 @@
     "debug": "^4.4.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.0.2",
-    "@angular/cli": "^20.0.2",
-    "@angular/compiler-cli": "^20.0.2",
+    "@angular/build": "^21.0.4",
+    "@angular/cli": "^21.0.4",
+    "@angular/compiler-cli": "^21.0.6",
+    "@types/debug": "^4.1.12",
     "@types/jasmine": "~4.3.0",
     "@types/sdp-transform": "^2.4.9",
-    "@types/debug": "^4.1.12",
     "concat": "^1.0.3",
     "debug": "^4.4.3",
     "fs-extra": "^11.1.1",
@@ -69,7 +69,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^20.0.0",
-    "typescript": "~5.8.3"
+    "ng-packagr": "^21.0.1",
+    "typescript": "~5.9.3"
   }
 }
